--- a/Bulb-On-Off/CSS/style.css
+++ b/Bulb-On-Off/CSS/style.css
@@ -2,17 +2,34 @@
     position: absolute;
     top:50%;
     left:50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); 
+}
+
+button{
+	height:40px;
+	width:120px;
+    color:white;       
+    border:none;  
+    margin-left: 113px;
+	margin-top: 15px;
+} 
+
+
+/* #center{    
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);     
 }
 
 .bulb-off{
     width: 338px;
     height: 450px;
-    background: url("/Bulb-On-Off/Image/lightoff.png");
+    background: url('/Bulb-On-Off/Image/lightoff.png');    
 }
 
 .bulb-on{
     width: 338px;
     height: 450px;
-    background: url("/Bulb-On-Off/Image/lighton.png");
-}
+    background: url('/Bulb-On-Off/Image/lighton.png');    
+}  */
